Fix surefire plugin malconfiguration Now, unit tests should not fail because of not opening org.example.javachess