@@ -107,6 +107,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration combine.self="append">
+                    <argLine>--add-opens JavaChess/org.example.javachess=ALL-UNNAMED</argLine>
+                </configuration>
                 <version>3.0.0-M5</version>
             </plugin>
             <!-- maven failsafe plugin for integration testing -->
